@@ -16,8 +16,8 @@
 -- Dumping data for table `contest`
 -- 
 
-INSERT INTO `contest` (`cid`, `contestname`, `starttime`, `lastscoreupdate`, `endtime`, `unfreezetime`) VALUES (1, 'Demo practice session', '2006-01-01 09:00:00', NULL, '2006-01-01 11:00:00', NULL);
-INSERT INTO `contest` (`cid`, `contestname`, `starttime`, `lastscoreupdate`, `endtime`, `unfreezetime`) VALUES (2, 'Demo contest', '2006-01-01 12:00:00', '2008-01-01 16:00:00', '2008-01-01 17:00:00', '2008-01-01 17:30:00');
+INSERT INTO `contest` (`cid`, `contestname`, `starttime`, `freezetime`, `endtime`, `unfreezetime`) VALUES (1, 'Demo practice session', '2006-01-01 09:00:00', NULL, '2006-01-01 11:00:00', NULL);
+INSERT INTO `contest` (`cid`, `contestname`, `starttime`, `freezetime`, `endtime`, `unfreezetime`) VALUES (2, 'Demo contest', '2006-01-01 12:00:00', '2008-01-01 16:00:00', '2008-01-01 17:00:00', '2008-01-01 17:30:00');
 
 -- 
 -- Dumping data for table `judgehost`
